# kallichore

./: .gitignore  .mole.scan_cache.json  CLAUDE.md  Cargo.toml  LICENSE  LICENSE.txt  NOTICE  README.md  kallichore.json  mole-overrides.toml  mole.toml  namepipe-todo.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: cla.yml  release-linux.yml  release.yml  test.yml
crates/kallichore_api/: Cargo.toml  README.md
crates/kallichore_api/.openapi-generator/: FILES
crates/kallichore_api/api/: openapi.yaml
crates/kallichore_api/docs/: ActiveSession.md  AdoptedSession.md  ClientHeartbeat.md  ConnectionInfo.md  Error.md  ExecutionQueue.md  InterruptMode.md  NewSession.md  NewSession200Response.md  ResourceUsage.md  RestartSession.md  ServerConfiguration.md  ServerConfigurationLogLevel.md  ServerStatus.md  Session.md  SessionList.md  SessionListSessionsInner.md  SessionMode.md  StartupEnvironment.md  StartupError.md  VarAction.md  VarActionType.md  default_api.md
crates/kallichore_api/examples/client/: client_auth.rs  main.rs
crates/kallichore_api/examples/server/: main.rs  server.rs  server_auth.rs
crates/kallichore_api/src/: auth.rs  context.rs  header.rs  lib.rs  models.rs
crates/kallichore_api/src/client/: mod.rs
crates/kallichore_api/src/server/: mod.rs  server_auth.rs
crates/kcclient/: Cargo.toml
crates/kcclient/src/: kernel_spec.rs  main.rs
crates/kcserver/: Cargo.toml
crates/kcserver/src/: api.rs  body_reader.rs  client_session.rs  client_session_unix.rs  client_session_ws.rs  connection_file.rs  error.rs  execution_queue.rs  heartbeat.rs  jupyter_messages.rs  kernel_connection.rs  kernel_session.rs  kernel_state.rs  lib.rs  main.rs  named_pipe_connection.rs  named_pipe_http.rs  proc_stat.rs  process_tree.rs  registration_file.rs  registration_socket.rs  resource_monitor.rs  server.rs  session.rs  socket_forwarder.rs  startup_status.rs  transport.rs  websocket_service.rs  wire_message.rs  wire_message_header.rs  working_dir.rs  zmq_ws_proxy.rs
crates/kcserver/src/kernel_session/: connection.rs  environment.rs  handshake.rs  lifecycle.rs  mod.rs  process.rs  shell_wrapper.rs  startup.rs  utils.rs
crates/kcserver/tests/: README.md  advanced_execution_test.rs  api_test.rs  basic_server_tests.rs  connection_file_tests.rs  echo_kernel_test.rs  execution_queue_test.rs  integration_test.rs  lib.rs  named_pipe_test.rs  python_kernel_tests.rs  resource_usage_test.rs  shell_test.py
crates/kcserver/tests/common/: mod.rs  test_utils.rs  transport.rs
crates/kcshared/: Cargo.toml
crates/kcshared/src/: handshake_protocol.rs  jupyter_message.rs  kernel_info.rs  kernel_message.rs  lib.rs  port_picker.rs  websocket_message.rs
crates/openapi_client/: Cargo.toml
crates/openapi_client/.openapi-generator/: FILES
crates/openapi_client/api/: openapi.yaml
crates/openapi_client/examples/client/: main.rs
docs/: SessionList.md  SessionListSessionsInner.md  default_api.md
examples/server/: server.rs
resources/licenses/: NOTICE.template
scripts/: regen-api.sh  remove-tls-deps.sh
src/: lib.rs  models.rs
src/client/: mod.rs
src/server/: mod.rs
