[package]
name = "kcserver"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
kallichore_api = { path = "../kallichore_api" }
serde = { version = "1.0.203", features = ["derive"] }
swagger = "6.5.0"
futures = "0.3.30"
async-trait = "0.1.80"
clap = "4.5.7"
env_logger = "0.11.3"
log = "0.4.21"
serde_json = "1.0.125"
anyhow = "1.0.86"
rand = "0.8.5"
hex = "0.4.3"
portpicker = "0.1.1"
