[package]
name = "kcserver"
version = "0.1.28"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["http1", "http2", "server"] }
tokio = { version = "1", features = ["full"] }
kallichore_api = { path = "../kallichore_api" }
serde = { version = "1.0.203", features = ["derive"] }
swagger = "6.5.0"
futures = "0.3.30"
async-trait = "0.1.80"
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
serde_json = "1.0.125"
anyhow = "1.0.86"
rand = "0.8.5"
hex = "0.4.3"
portpicker = "0.1.1"
zeromq = "0.4.1"
tokio-tungstenite = "0.23.1"
hyper-util = { version = "0.1.7", features = ["tokio"] }
kcshared = { path = "../kcshared" }
chrono = "0.4.38"
hmac = "0.12.1"
sha2 = "0.10.8"
bytes = "1.7.1"
async-channel = "2.3.1"
sysinfo = "0.31.4"
event-listener = "5.3.1"
base64 = "0.22.1"
simplelog = "0.12.2"
once_cell = "1.20.2"
