[package]
name = "kcserver"
version = "0.1.59"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.6", features = ["http1", "http2", "server"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
kallichore_api = { path = "../kallichore_api", default-features = false, features = [
    "server",
] }
serde = { version = "1.0.203", features = ["derive"] }
swagger = { version = "7.0.0-rc2", default-features = false, features = [
    "http1",
    "server",
    "serdejson",
] }
futures = "0.3.30"
async-trait = "0.1.80"
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
serde_json = "1.0.125"
anyhow = "1.0.86"
rand = "0.8.5"
hex = "0.4.3"
zeromq = "0.4.1"
tokio-tungstenite = "0.23.1"
hyper-util = { version = "0.1.12", features = ["tokio", "server", "server-auto"] }
kcshared = { path = "../kcshared" }
chrono = "0.4.38"
hmac = "0.12.1"
sha2 = "0.10.8"
bytes = "1.7.1"
async-channel = "2.3.1"
sysinfo = "0.31.4"
event-listener = "5.3.1"
base64 = "0.22.1"
simplelog = "0.12.2"
once_cell = "1.20.2"
libc = "0.2"
errno = "0.3"
uuid = { version = "1.10.0", features = ["v4"] }
regex = "1.10.2"
percent-encoding = "2.3.1"
tower = { version = "0.5", features = ["util"] }
http = "1.2"
pin-project-lite = "0.2"

[target.'cfg(unix)'.dependencies]
hyperlocal-next = "0.9"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
tokio-tungstenite = "0.23.1"
futures = "0.3.30"
uuid = { version = "1.10.0", features = ["v4"] }
once_cell = "1.20.2"
urlencoding = "2.1"
async-trait = "0.1.80"
kallichore_api = { path = "../kallichore_api", features = ["client"] }

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging"
]
